# log-statement-generator

./: .gitignore  CMakeLists.txt  README.md  TestLogging.cpp  boilerplate.cpp  boilerplate.h  generate-cpp.py  log-interface.json  log-statements.cpp  test-logging.cpp  test.cpp
LogLib/: CMakeLists.txt
generate-cpp/: boilerplate-cpp.txt  boilerplate_cpp.txt  boilerplate_h.txt  generate-cpp.py
log-lib/: CMakeLists.txt
log-statements/: CMakeLists.txt  log-statements.cpp  log-statements.h
